added uml and er diagram
